<resources>
    <string name="app_name">Explosive Popcorn</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="article_title">Very long descriptive title for the article that spans across multiple lines. Now even more text on it here</string>
    <string name="ai_ml">AI and Machine Learning</string>
    <string name="picture">picture</string>
    <string name="icon">icon</string>
    <string name="topics">Topics</string>
    <string name="trends">Trends</string>
    <string name="topic_explanation">Select your topics of interest</string>
    <string name="account">Account</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="date">02 March 2023</string>
    <string name="article">The article titled Design Thinking for Education by Subhashish Das and Pratiksha Sharma explores the use of design thinking in the field of education. The authors emphasize the importance of incorporating empathy, experimentation, and iteration into the design of educational programs and materials.The article begins by highlighting the challenges faced by educators in designing effective and engaging learning experiences for students. Traditional approaches to curriculum design often prioritize content over student needs and interests, resulting in disengaged learners and lower academic performance.Design thinking offers an alternative approach to curriculum design, focusing on the needs of the learners themselves. This process involves empathy for the student, experimentation with different teaching methods, and iteration based on feedback from both students and instructors.The authors provide several examples of how design thinking can be applied in educational settings, including the use of prototyping to test out new teaching strategies, and the co-creation of curriculum with students to better align it with their interests and needs.The article also emphasizes the importance of interdisciplinary collaboration in design thinking for education, encouraging educators to work with professionals from fields such as psychology, engineering, and technology to develop innovative learning experiences.Overall, Design Thinking for Education presents a compelling argument for the use of design thinking in curriculum design. By prioritizing empathy, experimentation, and iteration, educators can create learning experiences that are engaging, effective, and tailored to the needs of their students.</string>
    <string name="author">Subhashish Das</string>
    <string name="link">https://link.springer.com/content/pdf/10.1007/978-1-0716-0728-2.pdf</string>
</resources>