<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout

        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ArticleView">
        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/picture"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_summary"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/image_card_summary">

            <TextView
                android:id="@+id/textTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/card_topic"
                android:fontFamily="@font/lato"
                android:paddingStart="5dp"
                android:paddingTop="2dp"
                android:paddingEnd="5dp"
                android:paddingBottom="2dp"
                android:text="@string/ai_ml"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/dm_serif_display"
                android:text="@string/article_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/lato"
                android:text="11 March 2023"
                android:textAllCaps="true"
                android:textColor="@color/gray_dark"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/article"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/lato_bold_italic"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/lato_italic"
                android:text="@string/link"
                android:textColor="@color/green_dark"
                android:textSize="11sp" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>